--- a/Scripts/readme
+++ b/Scripts/readme
@@ -1,1 +1,8 @@
 This is my Project work
+place some files in each folders (a min of 3)
+
+after that create your own branch and change in any script (in scripts folder)
+
+create a pull request
+
+and see the changes
